# micro-payment

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  run.py
decorators/: circuit_breaker.py  retry.py
payment_methods/: BankSlip.py  Pix.py
utils/: ensurepip.py  redis_client.py
